# Cassava-Leaf-Disease-Classification

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  README.md  main.py  pyproject.toml  train.py
.github/workflows/: ci.yaml
configs/: baseline.yaml  effdet.yaml  inception.yaml  kaggle.yaml  kaggle_effdet.yaml  kaggle_incv3.yaml  kaggle_yolo.yaml  yolo12.yaml
notebook/: eda.ipynb
src/: api.py  config.py  data.py  distributed.py  export.py  losses.py  metrics.py  models.py  trainer.py  utils.py
tests/: test_config.py  test_data.py
weights/: best_model.pth
