[project]
name = "imbalance-cv-pipeline"
version = "0.1.0"
description = "CV pipeline for imbalanced classification using Inception v3 and MobileNetV3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torchmetrics>=1.9.0",
    "tqdm>=4.68.3",
    "torch",
    "torchvision",
    'wandb',
    "kaggle>=2.2.3",
    "ipykernel>=7.3.0",
    "timm>=1.0.27",
    "ultralytics>=8.4.93",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "python-multipart>=0.0.32",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
